add comment count

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">HackerNews</string>
     <string name="recent_news">Recent News</string>
+
+    <string name="author_prefix">by </string>
+    <string name="count_default">0</string>
 </resources>
